kubernetes/apps/default/misc-ingress/app/ap1-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap1
  annotations:
    internal-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: &host "ap1.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ap1
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ap1
subsets:
  - addresses:
      - ip: "${SECRET_AP1_IP}"
    ports:
      - name: https
        port: 8443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ap1
spec:
  ports:
    - name: https
      port: 8443
  type: ClusterIP
